--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>HRUSHE</title>
-  <link rel="icon" href="/images/HRUSHE-B.png" />
+  <link rel="icon" href="/HRUSHE-B.png" />
   <style>
     body {
       margin: 0;
@@ -124,7 +124,7 @@
   <div class="sparkles"></div>
 
   <div class="container">
-    <img src="/images/HRUSHE-W.png" alt="HRUSHE logo" />
+    <img src="/HRUSHE-W.png" alt="HRUSHE logo" />
     <h1>Launching Soon..</h1>
     <p>Something bold, fresh, and street-ready is coming your way.<br>Stay tuned for the HRUSHE drop!</p>
 
