--- a/index.html
+++ b/index.html
@@ -16,26 +16,52 @@
       align-items: center;
       font-family: 'Poppins', sans-serif;
       color: #fff;
-      background: linear-gradient(135deg, #111827, #1f2937, #111827);
-      background-size: 400% 400%;
-      animation: gradientShift 10s ease infinite;
+      background: radial-gradient(circle at 50% 70%, #050505 0%, #000 100%);
       overflow: hidden;
     }
 
-    @keyframes gradientShift {
-      0% { background-position: 0% 50%; }
-      50% { background-position: 100% 50%; }
-      100% { background-position: 0% 50%; }
+    /* Starfield layer */
+    .stars {
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      top: 0;
+      left: 0;
+      background: transparent;
+      overflow: hidden;
+      z-index: 0;
     }
 
-    .container{display:flex;flex-direction:column;align-items:center;gap:18px;padding:28px}
+    .star {
+      position: absolute;
+      background: white;
+      width: 2px;
+      height: 2px;
+      border-radius: 50%;
+      opacity: 0.8;
+      animation: twinkle 4s infinite ease-in-out;
+    }
+
+    @keyframes twinkle {
+      0%, 100% { opacity: 0.2; transform: scale(1); }
+      50% { opacity: 1; transform: scale(1.3); }
+    }
+
+    .container {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      gap: 18px;
+      padding: 28px;
+      z-index: 2;
+    }
 
     img {
       width: 340px;
       height: auto;
       margin-bottom: 8px;
       animation: fadeIn 2s ease-in-out;
-      filter: drop-shadow(0 20px 30px rgba(0,0,0,0.6));
+      filter: drop-shadow(0 0 50px rgba(255,255,255,0.2));
     }
 
     @keyframes fadeIn {
@@ -60,9 +86,19 @@
     }
 
     .form {
-      display:flex;gap:8px;align-items:center
+      display:flex;
+      gap:8px;
+      align-items:center;
     }
-    input[type="email"]{padding:12px 14px;border-radius:999px;border:0;min-width:260px;font-size:1rem}
+
+    input[type="email"] {
+      padding:12px 14px;
+      border-radius:999px;
+      border:0;
+      min-width:260px;
+      font-size:1rem;
+    }
+
     .button {
       background: #fff;
       color: #111827;
@@ -74,9 +110,17 @@
       cursor: pointer;
       transition: all 0.18s ease;
     }
-    .button:active{transform:scale(0.99)}
 
-    .msg{font-size:0.95rem;color:#9ca3af;margin-top:10px}
+    .button:hover {
+      background: #f3f4f6;
+      transform: scale(1.05);
+    }
+
+    .msg {
+      font-size: 0.95rem;
+      color: #9ca3af;
+      margin-top: 10px;
+    }
 
     footer {
       position: absolute;
@@ -85,31 +129,7 @@
       color: #9ca3af;
       letter-spacing: 0.5px;
       animation: fadeIn 4s ease-in-out;
-    }
-
-    .sparkles {
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      pointer-events: none;
-      overflow: hidden;
-    }
-
-    .sparkle {
-      position: absolute;
-      width: 3px;
-      height: 3px;
-      background: white;
-      border-radius: 50%;
-      opacity: 0.8;
-      animation: sparkleMove 4s linear infinite;
-    }
-
-    @keyframes sparkleMove {
-      from { transform: translateY(0); opacity: 1; }
-      to { transform: translateY(100vh); opacity: 0; }
+      z-index: 2;
     }
 
     @keyframes slideUp {
@@ -117,18 +137,20 @@
       100% { opacity: 1; transform: translateY(0); }
     }
 
-    @media (max-width:520px){img{width:220px}input[type="email"]{min-width:160px}}
+    @media (max-width:520px) {
+      img { width:220px }
+      input[type="email"] { min-width:160px }
+    }
   </style>
 </head>
 <body>
-  <div class="sparkles"></div>
+  <div class="stars"></div>
 
   <div class="container">
     <img src="/HRUSHE-W.png" alt="HRUSHE logo" />
     <h1>Launching Soon..</h1>
     <p>Something bold, fresh, and street-ready is coming your way.<br>Stay tuned for the HRUSHE drop!</p>
 
-    <!-- Simple email form: will save to Firebase Firestore. If you prefer Formspree/Getform, scroll the canvas file comments. -->
     <form id="notify-form" class="form">
       <input id="email" type="email" placeholder="Enter your email" required autocomplete="email" />
       <button class="button" type="submit">Notify Me</button>
@@ -139,82 +161,54 @@
   <footer>© 2025 HRUSHE. All rights reserved.</footer>
 
   <script>
-    // Sparkle effect generator
-    const sparkleContainer = document.querySelector('.sparkles');
-    function createSparkle() {
-      const sparkle = document.createElement('div');
-      sparkle.classList.add('sparkle');
-      sparkle.style.left = Math.random() * 100 + 'vw';
-      sparkle.style.animationDuration = 3 + Math.random() * 2 + 's';
-      sparkle.style.opacity = Math.random();
-      sparkleContainer.appendChild(sparkle);
-      setTimeout(() => sparkle.remove(), 4000);
+    // Create static night sky with twinkling stars
+    const starsContainer = document.querySelector('.stars');
+    const numStars = 180;
+    for (let i = 0; i < numStars; i++) {
+      const star = document.createElement('div');
+      star.classList.add('star');
+      star.style.left = Math.random() * 100 + 'vw';
+      star.style.top = Math.random() * 100 + 'vh';
+      star.style.animationDelay = (Math.random() * 4) + 's';
+      star.style.opacity = Math.random();
+      starsContainer.appendChild(star);
     }
-    setInterval(createSparkle, 150);
   </script>
-
-  <!-- ====== Firebase (client) integration ======
-       Instructions:
-        1) Create a Firebase project at https://console.firebase.google.com/ (free tier ok).
-        2) Enable Firestore Database (in test mode while you build).
-        3) Go to Project Settings -> SDK setup and config, copy the firebaseConfig object.
-        4) Replace the placeholder below (FIREBASE_CONFIG) with your config.
-        5) Deploy this HTML somewhere (Netlify, Vercel, GitHub Pages, or your server).
-
-       What this does: saves documents in `firestore` collection named 'waitlist' with fields:
-         { email: string, createdAt: timestamp }
-  -->
 
   <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-app-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-firestore-compat.js"></script>
   <script>
-    // ---- paste your firebase config object here ----
     const FIREBASE_CONFIG = {
       apiKey: "AIzaSyCQFEUXrX1xAMZaacIf7HDx3aCHt9jHHwc",
       authDomain: "hrushe-88ce9.firebaseapp.com",
       projectId: "hrushe-88ce9",
-      storageBucket: "hrushe-88ce9.firebasestorage.app",
+      storageBucket: "hrushe-88ce9.appspot.app",
       messagingSenderId: "506678849042",
       appId: "1:506678849042:web:9d913355253fdf20ce72cb"
     };
 
-    // If user didn't replace config, we'll fallback to mailto behavior
-    const isFirebaseConfigured = FIREBASE_CONFIG.apiKey && FIREBASE_CONFIG.projectId && FIREBASE_CONFIG.appId;
+    firebase.initializeApp(FIREBASE_CONFIG);
+    const db = firebase.firestore();
 
-    if (isFirebaseConfigured) {
-      firebase.initializeApp(FIREBASE_CONFIG);
-      const db = firebase.firestore();
-
-      document.getElementById('notify-form').addEventListener('submit', async (e) => {
-        e.preventDefault();
-        const emailEl = document.getElementById('email');
-        const msg = document.getElementById('msg');
-        const email = emailEl.value.trim();
-        if (!email) return;
-        msg.textContent = 'Saving...';
-        try {
-          await db.collection('waitlist').add({
-            email: email,
-            createdAt: firebase.firestore.FieldValue.serverTimestamp()
-          });
-          msg.textContent = 'Thanks — you are on the list!';
-          emailEl.value = '';
-        } catch (err) {
-          console.error(err);
-          msg.textContent = 'Error saving. Try again or use the contact email.';
-        }
-      });
-    } else {
-      // Fallback: open mail client / or you can sign up for Formspree and paste endpoint
-      document.getElementById('notify-form').addEventListener('submit', (e) => {
-        e.preventDefault();
-        const email = document.getElementById('email').value.trim();
-        if (!email) return;
-        const subject = encodeURIComponent('Notify me — HRUSHE');
-        const body = encodeURIComponent('Please add this email to waitlist: ' + email);
-        window.location.href = `mailto:contact@hrushe.com?subject=${subject}&body=${body}`;
-      });
-    }
+    document.getElementById('notify-form').addEventListener('submit', async (e) => {
+      e.preventDefault();
+      const emailEl = document.getElementById('email');
+      const msg = document.getElementById('msg');
+      const email = emailEl.value.trim();
+      if (!email) return;
+      msg.textContent = 'Saving...';
+      try {
+        await db.collection('waitlist').add({
+          email: email,
+          createdAt: firebase.firestore.FieldValue.serverTimestamp()
+        });
+        msg.textContent = 'Thanks — you are on the list!';
+        emailEl.value = '';
+      } catch (err) {
+        console.error(err);
+        msg.textContent = 'Error saving. Try again or use the contact email.';
+      }
+    });
   </script>
 </body>
 </html>
