Update logo image source in index.html

--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
   <div class="stars"></div>
 
   <div class="container">
-    <img src="/HRUSHE LOGO.png" alt="HRUSHE logo" />
+    <img src="/HRUSHE LOGO-2.png" alt="HRUSHE logo" />
     <h1>Launching Soon..</h1>
     <p>Something bold, fresh, and street-ready is coming your way.<br>Stay tuned for the HRUSHE drop!</p>
 
