--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>HRUSHE</title>
-  <link rel="icon" href="/LOGO.png" />
+  <link rel="icon" href="/HRUSHE LOGO.png" />
   <style>
     body {
       margin: 0;
